--- a/src/app/project-details/project-details.component.html
+++ b/src/app/project-details/project-details.component.html
@@ -36,13 +36,13 @@
         <mat-card id="card">
           <mat-card-content class="btn">
               
-                <button mat-fab matTooltip="Add New Task's to Project" (click)="taskDialog()">
+                <button mat-fab matTooltip="Add New Task's to Project" (click)="taskDialog()" >
                   <mat-icon>add</mat-icon>
                 </button><br><br><br><br>
-                <button [hidden]="hidden" mat-fab matTooltip="Add New Member to Project" (click)="addMember()">
+                <button [hidden]="hidden" mat-fab matTooltip="Add New Member to Project" (click)="addMember()" [disabled]="creator">
                   <mat-icon>group_add</mat-icon>
                 </button><br><br><br><br>
-                <button  matTooltip="Delete the Project" mat-fab (click)="deleteProject()">
+                <button  matTooltip="Delete the Project" mat-fab (click)="deleteProject()" [disabled]="creator">
                   <mat-icon>delete</mat-icon>
                 </button>
       
@@ -83,15 +83,15 @@
                
                 <mat-card-content>
                   <div id="cards" class="container">
-                    <div id="addMember">
-                      <h2 id="plus" (click)="addMember()">
+                    <div *ngIf="!creator" id="addMember">
+                      <h2 id="plus"  (click)="addMember()">
                         <i id="plus_icon" class="fa-solid fa-circle-plus"></i><br><br>
                         ADD NEW MEMBER <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; TO PROJECT
                       </h2>
                   </div>
                     <ul *ngFor="let member of projectDetails?.assigned_empl">
                       <li><img *ngIf="member.profile_pic" id="img" src="{{member?.profile_pic}}" alt="image"><button *ngIf="!member.profile_pic" id="img"><i class="fa-solid fa-{{member.username?.charAt(0)}}"></i></button>
-                        <h3 id="members">{{member?.email}}  &nbsp;&nbsp;&nbsp;<button (click)="removeMember(member)" matTooltip="Remove Member from Project" id="delete" mat-icon-button color="accent"><i class="fa-solid fa-user-slash"></i></button></h3></li>   
+                        <h3 id="members">{{member?.email}}  &nbsp;&nbsp;&nbsp;<button [disabled]="creator" (click)="removeMember(member)" matTooltip="Remove Member from Project" id="delete" mat-icon-button color="accent"><i class="fa-solid fa-user-slash"></i></button></h3></li>   
                   </ul>
                   </div>
                 </mat-card-content>
