--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -113,7 +113,7 @@ h6{
 	 background-repeat: no-repeat;
    background-size: cover;
 	 background-position: left bottom;
-  background-image: url('../../assets/signup.jpg');
+  background-image: url('../../assets/bg1.png');
 }
  .form-structor .signup {
 	 position: absolute;
