--- a/src/app/task-board/task-board.component.css
+++ b/src/app/task-board/task-board.component.css
@@ -78,7 +78,15 @@ mat-icon{
     margin-top: 150px;
 }
 
+.responsive{
+    pointer-events: all;
+}
+
 #non-responsive{
+    pointer-events: none;
+}
+
+.not_responsive{
     pointer-events: none;
 }
 
