--- a/src/app/contact-us/contact-us.component.css
+++ b/src/app/contact-us/contact-us.component.css
@@ -236,6 +236,29 @@ form>button {
   /* margin-bottom: 0rem; */
 }
 
+#adv{
+  position: fixed;
+  top: 750px;
+  left: 1000px;
+  width: 600px;
+  height: 100px;
+  background-image: url('../../assets/side_nav.png');
+  padding: 20px;
+  border-radius: 20px;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+
+h1{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  letter-spacing: 0.2rem;
+}
+
+#get{
+  position: relative;
+  top: -50px;
+  left: 450px;
+}
+
 #sender>p {
   width: fit-content;
   max-width: 70%;
@@ -248,7 +271,6 @@ form>button {
   margin-right: 1%;
   padding: .5rem;
   text-align: right;
-  font-size: 20px;
 }
 
 #receiver>p {
