--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -48,6 +48,9 @@
     <img src="../../assets/person1.png" alt="person" id="person">
   </div>
 
+  <div *ngIf="title" id="adv">
+    <h1>GET FASTER REPLIES NOW ... ! <br> AND 24/7 SUPPORT <br><button id="get" mat-raised-button color="warn" routerLink="/pricing">GET NOW</button></h1>
+  </div>
 
   <footer>
     <app-footer></app-footer>
