--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -5,7 +5,7 @@
 }
 .app-container{
     width: 100vw;
-    height: 100%;   
+    height: 850px;  
     z-index: 0;
 }
 
@@ -27,6 +27,8 @@
 
 #main-container{
     background-color: transparent;
+    height: 100%;
+    overflow: hidden;
 }
 #top-bar{
     display: flex;
@@ -57,7 +59,7 @@ button{
     /* display: flex;
     justify-content: space-around; */
     margin-top: 40px;
-    height: 900px;
+    height: 850px;
     margin-bottom: 40px;
     width: 100%;
     border-radius: 10px;
@@ -101,6 +103,7 @@ button{
     color: black;
     position: relative;
     left: 1400px;
+    background-color: #ffe07a;
 }
 
 i{
