--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,6 +2,7 @@
 <div id="dashboard">
 <mat-sidenav-container class="app-container">
     <mat-sidenav #sidenav mode="side" [class.mat-elevation-z4]="false" class="app-sidenav">
+
         <mat-nav-list>
             <mat-list-item id="home" routerLink="/home">
                 &nbsp;&nbsp; <mat-icon>home</mat-icon>&nbsp;&nbsp;<span>Home</span>
@@ -39,7 +40,7 @@
                     </div>
                 </mat-expansion-panel-header>
                 <mat-nav-list *ngFor="let project of archiveProjects">
-                    <a mat-list-item (click)="showAssignedProjects(project)">{{project?.name}}</a>
+                    <a mat-list-item (click)="showArchiveProjects(project)">{{project?.name}}</a>
                 </mat-nav-list>
             </mat-expansion-panel>
             <mat-list-item routerLink="/chat">
