--- a/src/app/dialog/delete-verify-dialog/delete-verify-dialog.component.css
+++ b/src/app/dialog/delete-verify-dialog/delete-verify-dialog.component.css
@@ -2,3 +2,11 @@ mat-card{
     width: 500px;
     height: 300px;
 }
+
+i{
+    color: red;
+    margin-top: 10px;
+    margin-right: 10px;
+    border: 0;
+    background-color: transparent;
+}
