--- a/src/app/edit-profile/edit-profile.component.html
+++ b/src/app/edit-profile/edit-profile.component.html
@@ -1,6 +1,6 @@
 
 <div id="gif">
-    <img src="../../assets/edit_profile.gif" alt="message gif">
+    <img src="../../assets/edit_profile.png" alt="message gif">
 </div>
 
 <main class="container d-flex">
@@ -41,27 +41,37 @@
                   <span class="icon"><i class="fas fa-envelope"></i></span>
                   <input type="email" id="email" name="email_id" value="{{userDetails.email}}" [(ngModel)]="tempUser.email_id" readonly> 
                 </div>
+                <div id="user-name-helper" class="helper">
+                    <h5>You can't change this field</h5>
+                </div>
               </div>
-              <button *ngIf="!verified" class="btn btn-outline-secondary mb-5" type="button" (click)="passChange = !passChange">change password</button>
+              <button id="change" *ngIf="!verified" mat-raised-button color="accent" type="button" (click)="passChange = !passChange">Change Password</button>
               <div *ngIf="passChange" class="fieldset">
                 <label for="pass">Current Password</label>
                 <div class="input-group input-wrapper">
                   <span class="icon"><i class="fas fa-key"></i></span>
-                  <input type="password" id="pass"  name="password" [(ngModel)]="tempUser.password" >
-                  <button class="btn btn-outline-secondary" type="button" (click)="verfiyPass()" >verify</button>
+                  <input [type]="hide ? 'password' : 'text'" id="pass"  name="password" [(ngModel)]="tempUser.password">
+                  <mat-icon id="eye" matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                  <button id="verify" mat-stroked-button type="button" (click)="verfiyPass()" >verify</button>
+                </div>
+                <div id="user-name-helper" class="helper">
+                    <h5>Enter your OLD password and Verify to Change Password</h5>
                 </div>
               </div>
               <div class="fieldset" *ngIf="verified">
                 <label for="pass">New Password</label>
                 <div class="input-wrapper">
                   <span class="icon"><i class="fas fa-key"></i></span>
-                  <input type="password" id="pass" autocomplete="current-password" name="password" [(ngModel)]="tempUser.password">
+                  <input [type]="hide ? 'password' : 'text'" id="pass" autocomplete="current-password" name="password" [(ngModel)]="tempUser.password">
+                  <mat-icon id="eye1" matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                 </div>
-                <div id="pass-helper" class="helper"></div>
+                <div id="pass-helper" class="helper">
+                    <h5>Enter Your New Password</h5>
+                </div>
               </div>
               <div class="d-flex justify-content-evenly">
-                <button type="button" class="btn btn-outline-danger" routerLink="/dashboard"><i class="fas fa-ban"></i>&nbsp;&nbsp;Cancel</button>
-                <button type="button" class="btn btn-outline-success" (click)="changeprofile()"><i class="fas fa-save"></i>&nbsp;&nbsp;Success</button>
+                <button type="button" mat-flat-button color="warn" routerLink="/dashboard"><i class="fas fa-ban"></i>&nbsp;&nbsp;Cancel</button>
+                <button id="success" type="button" mat-raised-button (click)="changeprofile()"><i class="fas fa-save"></i>&nbsp;&nbsp;SAVE</button>
               </div>
             </form>
           </div>
