--- a/src/app/project-details/project-details.component.css
+++ b/src/app/project-details/project-details.component.css
@@ -5,7 +5,7 @@
 
 
 button{
-    background-color: #f6deb8;
+    background-color: #ffe07a;
 }
 
 #cards{
@@ -14,6 +14,8 @@ button{
     background-color: #e2e2e6;
     border: 0;
     border-radius: 20px;
+    overflow: auto;
+    overflow-x: hidden;
 }
 
 #contents{
@@ -43,8 +45,8 @@ button{
     top: 20px;
     right: 20px;
     left: 10px;
-    width: 64px;
-    height: 64px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
     background-color: #fff;
     border: 0;
@@ -59,7 +61,8 @@ ul{
 }
 
 #main-container{
-    height: 900px;
+    height: 760px;
+    background-color: transparent;
     overflow: hidden;
 }
 
@@ -167,7 +170,7 @@ h1{
 
 
 #card{
-    width: 20rem;
+    width: max-content;
     height: 5.5rem;
     border-radius: 30px;
     background-color: transparent;
