--- a/src/app/project-details/project-details.component.html
+++ b/src/app/project-details/project-details.component.html
@@ -57,7 +57,7 @@
               </ng-template>
               <mat-card class="scrollable-content">
                 <mat-card-content>
-                  <app-task-board [taskList]="projectDetails.taskList"></app-task-board>
+                  <app-task-board [taskListData]="projectDetails.taskList"></app-task-board>
                 </mat-card-content>
               </mat-card>
             </mat-tab>
