--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -228,3 +228,11 @@ mat-toolbar .btn_signup_change{
   background-color: white;
   border-radius: 10px;
 }
+@media screen and (max-width: 500px){
+  #btn3{
+    display: none;
+  }
+  #btn5{
+    display: none;
+  }
+}
