--- a/src/app/contact-us/contact-us.component.css
+++ b/src/app/contact-us/contact-us.component.css
@@ -1,15 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Josefin+Sans:wght@600&family=Phudu:wght@600&family=Raleway:wght@900&family=Roboto+Mono:ital,wght@1,600&display=swap');
 
 
+
+#main-container{
+  width: 100%;
+  display: flex;
+  /* justify-content: space-around; */
+  margin: 5%;
+  
+}
 .mat-card {
-  position: fixed;
-  top: 180px;
-  width: 900px;
+ 
+  width: 50%;
   height: 550px;
-  left: 850px;
   border-radius: 10px;
   background-image: url('../../assets/side_nav.png');
-  background-size: cover;
+  /* background-size: cover; */
   box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
 
@@ -28,7 +34,7 @@
 
 h2 {
   margin-top: 30px;
-  margin-left: 250px;
+  text-align: center;
   font-size: 40px;
   font-weight: 900px;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -37,16 +43,17 @@ h2 {
 
 }
 
+#img{
+  width: 30%;
+}
+
 #person {
-  width: 850px;
-  position: absolute;
-  top: 250px;
-  left: 100px;
+  width: 75%;
 }
 
 footer{
   position: relative;
-  top: 795px;
+  bottom: 0px;
 }
 
 
@@ -96,7 +103,7 @@ textarea.question {
 input.question+label,
 textarea.question+label {
   display: block;
-  position: relative;
+
   white-space: nowrap;
   padding: 0;
   margin: 0;
@@ -150,10 +157,8 @@ input.question+label>span,
 textarea.question+label>span {
   font-weight: 300;
   margin: 0;
-  position: absolute;
   color: #8F8F8F;
-  font-size: 48px;
-  top: -66px;
+  font-size: 48px;  
   left: 0px;
   z-index: -1;
   -webkit-transition: top 0.2s ease, font-size 0.2s ease, color 0.2s ease;
@@ -215,6 +220,10 @@ textarea.question:invalid~input[type="submit"] {
 
 form {
   width: 100%;
+  display: flex;
+  margin-bottom: 5%;
+  justify-content: space-around;
+
 }
 
 form>mat-form-field {
@@ -226,9 +235,7 @@ form>mat-form-field {
 form>button {
   background-color: orange;
   color: white;
-  position: relative;
-  left: 800px;
-  bottom: 40px;
+
 }
 
 #input-message {
@@ -265,4 +272,27 @@ form>button {
 
 #chat-history {
   overflow-y: auto;
+}
+
+@media screen and (max-width: 500px) {
+
+  #main-container{
+    width: 100%;
+    display: flex;
+    flex-direction: column-reverse;
+    /* justify-content: space-around; */
+    margin: 5%;
+    
+  }
+
+  .mat-card {
+ 
+    width: 90%;
+    height: 550px;
+  }
+
+  #img{
+    width: 90%;
+  }
+  
 }
