Updated with other changes

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -31,7 +31,7 @@
             </div>
           </div>
           <h6 class="team-title">SELVAM KS</h6>
-          <span>Software Engineer</span>
+          <span>Full Stack Software Engineer</span>
         </div>
       </div>
       <!-- end team member -->
@@ -55,7 +55,7 @@
             </div>
           </div>
           <h6 class="team-title">SUJAY M</h6>
-          <span>Software Engineer</span>
+          <span>Full Stack Software Engineer</span>
         </div>
       </div>
       <!-- end team member -->
@@ -79,7 +79,7 @@
             </div>
           </div>
           <h6 class="team-title">VINAY ARORA</h6>
-          <span>Software Engineer</span>
+          <span>Full Stack Software Engineer</span>
         </div>
       </div>
       <!-- end team member -->
