--- a/src/app/task-card/task-card.component.css
+++ b/src/app/task-card/task-card.component.css
@@ -229,13 +229,26 @@ i{
   margin-left: -8px;
   padding: 0px !important;
 }
-/* mat-card-actions{
-  visibility: hidden;
+
+mat-card-subtitle{
+  width: 120px !important;
+  white-space: nowrap; 
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
-mat-card:hover mat-card-actions{
-  justify-content: space-around;
-  visibility: visible;
-} */
+
+h5{
+  margin-left: 50px;
+  margin-top: 20px;
+}
+
+/* mat-card-actions{ */
+  /* visibility: hidden; */
+/* } */
+/* mat-card:hover mat-card-actions{ */
+  /* justify-content: space-around; */
+  /* visibility: visible; */
+/* } */
 
 .member_mune{
   width: 50px;
