--- a/src/app/about-us/about-us.component.css
+++ b/src/app/about-us/about-us.component.css
@@ -149,5 +149,30 @@ footer{
     color: #fff;
     background-color: #355c7d;
   }
+
+  @media screen and (max-width: 500px) {
+      h1{
+        font-size: 20px;
+        position: relative;
+        left: 100px;
+        margin: 0;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        width: fit-content;
+        overflow-x: hidden;
+        
+      }
+      h2{
+        font-size: 15px;
+        position: relative;
+        left: 30px;
+      }
+      h3{
+        font-size: 15px;
+        position: relative;
+        left: 30px;
+       
+      }
+  }
   
   
