--- a/src/app/queries/queries.component.css
+++ b/src/app/queries/queries.component.css
@@ -227,13 +227,29 @@
     }
   }
   
-  @media screen and (max-width: 600px) {
-    .screen-body {
-      padding: 40px;
-    }
-  
-    .screen-body-item {
-      padding: 0;
-    }
+
+@media screen and (max-width: 600px) { 
+
+
+  img{
+    width: 130px;
+    height: 130px;
   }
+
+  .background{
+    width: 50px;
+    height: 40px;
+  }
+  .screen{
+    width: 490px;
+    height: 650px;
+    margin-left: -10px;
+    margin-top: 10px;
+  }
+
+  footer{
+    position: relative;
+    top: 770px;
+  }
+}
   
