--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -15,7 +15,7 @@
       <div class="col-md-4 col-sm-6 team-wrap">
         <div class="team-member text-center">
           <div class="team-img">
-            <img src="../../assets/selvam.jpg" alt="">
+            <img src="../../assets/selvam.jfif" alt="">
             <div class="overlay">
               <div class="team-details text-center">
                 <p>
