--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div id="main-container">
 
 <div>
-  <h1 >
+  <h1  title="title">
     One Web App to focus on all your projects.
  </h1>
     <img class="gif" id="gif" src="../../assets/working@home.gif" alt="">
@@ -15,8 +15,6 @@
   <button id="btn" *ngIf="name" mat-raised-button routerLink="/dashboard">Get Started</button>
   <button id="btn" *ngIf="!name" mat-raised-button routerLink="/register">Get Started</button>
 </div>
-
-
 
 <div class="container">
   <mat-card id="cards">
@@ -33,7 +31,7 @@
   </mat-card>
 </div>
 
-  <div class="extra">
+  <div  class="extra">
     <h2 id="extra">Start Now and Experience Our Futuristic UI </h2>
   </div>
 
